--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="accept">
                         <label for="" class="text-light text-uppercase">
-                            <input type="checkbox" class="text-uppercase"> I Accept the Terms and Conditions and Privacy Policy of the website
+                            <input type="checkbox" class="text-uppercase"> I Accept The Terms And Conditions And Privacy Policy Of The Website
                         </label>
                     </div>
                     <div class="text-center submit">
