--- a/views/content/home.html
+++ b/views/content/home.html
@@ -27,7 +27,7 @@
         <div class="health-info">
           <h3 class="brand-primary title text-uppercase text-bold font-gotham">Health <span class="block">Packages</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-          <button class="btn btn-primary text-uppercase font-gotham letter-space" type="button">know more</button>
+          <a href="#/healthpackages" class="btn btn-primary text-uppercase font-gotham letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/health-package.png" alt="" class="img-responsive">
           </div>
@@ -37,7 +37,7 @@
         <div class="health-info">
           <h3 class="brand-yellow title text-uppercase text-bold font-gotham">Health <span class="block">Products</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-          <button class="btn btn-yellow text-uppercase font-gotham letter-space" type="button">know more</button>
+          <a href="#/healthproducts" class="btn btn-yellow text-uppercase font-gotham letter-space know-more">know more</a>
           <div class="health-imgholder">
             <img src="img/health-products.png" alt="" class="img-responsive">
           </div>
@@ -45,7 +45,7 @@
       </div>
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-blue title text-uppercase text-bold font-gotham">cool <span class="block">sculpting</span></h3>
+          <h3 class="brand-blue title text-uppercase text-bold font-gotham know-more">cool <span class="block">sculpting</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
           <button class="btn btn-blue text-uppercase font-gotham letter-space" type="button">know more</button>
           <div class="health-imgholder">
