--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -20,7 +20,7 @@
                 <div class="category-imghold  round">
                   <img src="img/health/ailment.png" alt="" class="img-responsive">
                 </div>
-                <figcaption class="text-uppercase brand-brown-dark text-bold">alment control</figcaption>
+                <figcaption class="text-uppercase brand-brown-dark font-semibold">ailment control</figcaption>
               </a>
             </figure>
           </div>
