--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -19,15 +19,15 @@
           <div class="health-tab healthchart-list">
             <div class="inline-block v-top">
               <div class="consult-chart relate inline-block text-center">
-                <span class="noconsult brand-brown-dark">4</span>
-                <span class="text-uppercase white consult">consults</span>
+                <span class="noconsult brand-brown-dark font-semibold">4</span>
+                <span class="text-uppercase white consult font-gotham">consults</span>
               </div>
             </div>
             <div class="tab-chart">
               <tabset>
                 <tab>
                   <tab-heading class="duration">
-                    <div class="chart-head ">
+                    <div class="chart-head">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">1 month</p>
                     </div>
@@ -37,7 +37,7 @@
                   <tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
-                      <p class="price">Rs 9900 <sup>*</sup></p>
+                      <p class="price">Rs 9900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                   <div class="chart-info">
@@ -46,8 +46,8 @@
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
-                      <h5 class="text-uppercase">specail addons</h5>
-                      <ul class="chart-list">
+                      <h5 class="text-uppercase font-semibold">special addons</h5>
+                      <ul class="chart-list font-semibold">
                         <li>A folder, Diet Dairy and Measuremnet Card.</li>
                         <li>10 Pillars of Health Design and Fruit Exchange List.</li>
                         <li>Personalized exercise regime</li>
@@ -69,7 +69,7 @@
                         <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                       </div>
                       <div class="plan">
-                        <span class="note"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
                         <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
                       </div>
                     </div>
@@ -79,7 +79,7 @@
                   <tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
-                      <p class="price">Rs 17900 <sup>*</sup></p>
+                      <p class="price">Rs 17900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                   <div class="chart-info">
@@ -111,7 +111,7 @@
                         <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                       </div>
                       <div class="plan">
-                        <span class="note"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
                         <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
                       </div>
                     </div>
@@ -121,7 +121,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-uppercase">diamond</p>
-                      <p class="price">Rs 27900 <sup>*</sup></p>
+                      <p class="price">Rs 27900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                   <div class="chart-info">
@@ -152,7 +152,7 @@
                           <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                         </div>
                         <div class="plan">
-                          <span class="note"><sup>*</sup>inclusive of all taxes</span>
+                          <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
                           <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
                         </div>
                       </div>
@@ -165,15 +165,15 @@
           <div class="healthchart-list">
             <div class="inline-block v-top">
               <div class="consult-chart relate inline-block text-center">
-                <span class="noconsult brand-brown-dark ">8</span>
-                <span class="text-uppercase white consult">consults</span>
+                <span class="noconsult brand-brown-dark font-semibold">8</span>
+                <span class="text-uppercase white consult font-gotham">Consults</span>
               </div>
             </div>
             <div class="tab-chart">
               <tabset>
                 <tab>
                   <tab-heading class="duration">
-                    <div class="chart-head ">
+                    <div class="chart-head">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">2 month</p>
                     </div>
@@ -183,7 +183,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
-                      <p class="price">Rs 18900 <sup>*</sup></p>
+                      <p class="price">Rs 18900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                 </tab>
@@ -191,7 +191,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
-                      <p class="price">Rs 33900 <sup>*</sup></p>
+                      <p class="price">Rs 33900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                 </tab>
@@ -199,7 +199,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
-                      <p class="price">Rs 47900 <sup>*</sup></p>
+                      <p class="price">Rs 47900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                 </tab>
@@ -209,8 +209,8 @@
           <div class="healthchart-list">
             <div class="inline-block v-top">
               <div class="consult-chart relate inline-block text-center">
-                <span class="noconsult brand-brown-dark ">18</span>
-                <span class="text-uppercase white consult">consults</span>
+                <span class="noconsult brand-brown-dark font-semibold">18</span>
+                <span class="text-uppercase white consult font-gotham">consults</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -227,7 +227,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
-                      <p class="price">Rs 34900 <sup>*</sup></p>
+                      <p class="price">Rs 34900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                 </tab>
@@ -235,7 +235,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
-                      <p class="price">Rs 59900 <sup>*</sup></p>
+                      <p class="price">Rs 59900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                 </tab>
@@ -243,7 +243,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
-                      <p class="price">Rs 77900 <sup>*</sup></p>
+                      <p class="price">Rs 77900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                 </tab>
@@ -253,8 +253,8 @@
           <div class="healthchart-list">
             <div class="inline-block v-top">
               <div class="consult-chart relate inline-block text-center">
-                <span class="noconsult brand-brown-dark ">26</span>
-                <span class="text-uppercase white consult">consults</span>
+                <span class="noconsult brand-brown-dark font-semibold">26</span>
+                <span class="text-uppercase white consult font-gotham">consults</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -271,7 +271,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
-                      <p class="price">Rs 49900 <sup>*</sup></p>
+                      <p class="price">Rs 49900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                 </tab>
@@ -279,7 +279,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
-                      <p class="price">Rs 89900 <sup>*</sup></p>
+                      <p class="price">Rs 89900<sup>*</sup></p>
                     </div>
                   </tab-heading>
                 </tab>
@@ -287,7 +287,7 @@
                   <tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
-                      <p class="price">Rs 99900 <sup>*</sup></p>
+                      <p class="price">Rs 99900<sup>*</sup></p>
                   </tab-heading>
                 </tab>
               </tabset>
