--- a/views/content/home.html
+++ b/views/content/home.html
@@ -45,9 +45,9 @@
       </div>
       <div class="col-md-4">
         <div class="health-info">
-          <h3 class="brand-blue title text-uppercase text-bold font-gotham know-more">cool <span class="block">sculpting</span></h3>
+          <h3 class="brand-blue title text-uppercase text-bold font-gotham">cool <span class="block">sculpting</span></h3>
           <p class="text-justify health-descp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley.</p>
-          <button class="btn btn-blue text-uppercase font-gotham letter-space" type="button">know more</button>
+          <button class="btn btn-blue text-uppercase font-gotham letter-space know-more">know more</button>
           <div class="health-imgholder">
             <img src="img/cool-sculpting.png" alt="" class="img-responsive">
           </div>
