--- a/views/content/home.html
+++ b/views/content/home.html
@@ -110,8 +110,8 @@
 <div class="brand-brown-bg section-story">
   <div class="container">
     <div class="slider brand-brown-light-bg">
-   <carousel interval="myInterval" no-wrap="noWrapSlides">
-        <slide ng-repeat="slide in homestory" active="slide.active">
+   <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
+        <uib-slide ng-repeat="slide in homestory" active="slide.active">
           <div class="row">
             <div class="col-md-6">
               <div class="story-video">
@@ -140,8 +140,8 @@
             <p>{{slide.text}}</p>
           </div>
 -->
-        </slide>
-      </carousel>
+        </uib-slide>
+      </uib-carousel>
     </div>
   </div>
 </div>
