--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -88,8 +88,8 @@
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
-                      <h5 class="text-uppercase">specail addons</h5>
-                      <ul class="chart-list">
+                      <h5 class="text-uppercase font-semibold">special addons</h5>
+                      <ul class="chart-list font-semibold">
                         <li>A folder, Diet Dairy and Measuremnet Card.</li>
                         <li>10 Pillars of Health Design and Fruit Exchange List.</li>
                         <li>Personalized exercise regime</li>
@@ -130,8 +130,8 @@
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
-                      <h5 class="text-uppercase">specail addons</h5>
-                      <ul class="chart-list">
+                      <h5 class="text-uppercase font-semibold">special addons</h5>
+                      <ul class="chart-list font-semibold">
                         <li>A folder, Diet Dairy and Measuremnet Card.</li>
                         <li>10 Pillars of Health Design and Fruit Exchange List.</li>
                         <li>Personalized exercise regime</li>
