--- a/views/content/news.html
+++ b/views/content/news.html
@@ -14,23 +14,23 @@
         <div class="row">
           <div class="col-md-4">
             <div class="article-image">
-              <img ng-src="{{article.image1}}" alt="" class="doneloading">
+              <img ng-src="{{article.image1}}" alt="" class="img-responsive">
             </div>
-            <p>{{article.title1}}</p>
+            <p class="brand-brown-dark">{{article.title1}}</p>
           </div>
 
           <div class="col-md-4">
             <div class="article-image">
-              <img ng-src="{{article.image2}}" alt="" class="doneloading">
+              <img ng-src="{{article.image2}}" alt="" class="img-responsive">
             </div>
-            <p>{{article.title2}}</p>
+            <p class="brand-brown-dark">{{article.title2}}</p>
           </div>
 
           <div class="col-md-4">
             <div class="article-image">
-              <img ng-src="{{article.image3}}" alt="" class="doneloading">
+              <img ng-src="{{article.image3}}" alt="" class="img-responsive">
             </div>
-            <p>{{article.title3}}</p>
+            <p class="brand-brown-dark">{{article.title3}}</p>
           </div>
         </div>
       </div>
