--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -577,3 +577,17 @@
     }
   }
 }
+
+// News
+.news {
+  .news-article {
+    @include margin(20px 0);
+    .article-image {
+      @include size(100%, 170px);
+      border: 3px solid $brand-primary;
+      border-radius: 5px;
+      img { @include square(100%); }
+    }
+    p { font-size: 18px; }
+  }
+}
