--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -580,14 +580,29 @@
 
 // News
 .news {
+  @include margin(100px 0);
+  .slider {
+    @include margin(0 0 50px);
+    button {
+      @include padding(5px 40px);
+      font-size: 14px;
+      font-weight: bold;
+      letter-spacing: 4px;
+      &:hover { color: white; }
+    }
+  }
   .news-article {
     @include margin(20px 0);
     .article-image {
       @include size(100%, 170px);
-      border: 3px solid $brand-primary;
+      border: 2px solid $brand-primary;
       border-radius: 5px;
       img { @include square(100%); }
     }
-    p { font-size: 18px; }
+    p {
+      @include margin(10px 0);
+      font-size: 18px;
+      letter-spacing: 0.5px;
+    }
   }
 }
