--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -97,12 +97,12 @@
             <div class="checkout-table">
               <div class="cart-table">
                 <table class="table">
-                  <thead class="brand-brown-dark brand-brown-bg text-uppercase letter-space">
+                  <thead class="brand-primary text-uppercase letter-space">
                     <tr>
-                      <th class="text-center">Items</th>
+                      <th class="text-center">Item description</th>
                       <th class="text-center">Quantity</th>
-                      <th class="text-center">Amount</th>
-                      <th class="text-center">Total Amount</th>
+                      <th class="text-center">price</th>
+                      <th class="text-center">Sub total</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -117,8 +117,8 @@
                       </td>
                       <td>
                         <input type="number" class="text-center quantity" name="" id="" value="{{product.quantity}}" disabled>
-                        <span class="more inline-block brand-primary-bg white"><i class="fa fa-plus"></i></span>
-                        <span class="less inline-block brand-primary-bg white"><i class="fa fa-minus"></i></span>
+                        <!-- <span class="more inline-block brand-primary-bg white"><i class="fa fa-plus"></i></span>
+                        <span class="less inline-block brand-primary-bg white"><i class="fa fa-minus"></i></span> -->
                       </td>
                       <td>
                         <div class="cart-amount">
