--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -577,18 +577,102 @@
     }
   }
 }
+.product-also-like {
+  @include margin(30px 0 100px);
+  h3 {
+    @include margin(0 0 20px);
+    font-size: 28px;
+  }
+  .glyphicon-chevron-right:before {
+    @include square(40px);
+    @include margin(-20px 0 0);
+    content: "\f105";
+    display: block;
+    color: $brand-brown-dark;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: 40px;
+    line-height: 35px;
+    border: 2px solid $brand-brown-dark;
+    border-radius: 100%;
+  }
+  .glyphicon-chevron-left:before {
+    @include square(40px);
+    @include margin(-20px 0 0);
+    content: "\f104";
+    display: block;
+    color: $brand-brown-dark;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: 40px;
+    line-height: 35px;
+    border: 2px solid $brand-brown-dark;
+    border-radius: 100%;
+  }
+  .inner-like {
+    .like-image {
+      @include square(200px);
+      @include margin(0 auto);
+      overflow: hidden;
+      img { @include square(100%); }
+    }
+    span {
+      @include margin(20px 0 0);
+      display: block;
+      font-size: 16px;
+    }
+  }
+}
 
 // News
 .news {
-  @include margin(100px 0);
-  .slider {
-    @include margin(0 0 50px);
+  @include margin(20px 0 100px);
+  .flex-control-nav { display: none; }
+  .flex-direction-nav a { height: 50px; }
+  .flex-direction-nav .flex-prev { opacity: 1; }
+  .flex-direction-nav .flex-next { opacity: 1; }
+  .flexslider:hover {
+    .flex-prev {
+      opacity: 1;
+      left: -50px;
+    }
+    .flex-next {
+      opacity: 1;
+      right: -50px;
+    }
+  }
+  .flex-prev {
+    top: 57px;
+    &:before {
+      content: "\f104";
+      display: block;
+      font: normal normal normal 55px/1 FontAwesome;
+      color: $brand-brown;
+    }
+  }
+  .flex-next {
+    top: 57px;
+    &:before {
+      display: block;
+      font: normal normal normal 55px/1 FontAwesome;
+      color: $brand-brown;
+    }
+  }
+  .flex-direction-nav a.flex-next:before { content: "\f105"; }
     button {
+      @include margin(50px 0 0);
       @include padding(5px 40px);
       font-size: 14px;
       font-weight: bold;
       letter-spacing: 4px;
       &:hover { color: white; }
+      &:active {
+        color: white;
+        box-shadow: none;
+      }
+      &:focus { color: white; }
+    }
+    .slider {
+      width: 95%;
+      margin: 0 auto;
     }
   }
   .news-article {
@@ -597,6 +681,8 @@
       @include size(100%, 170px);
       border: 2px solid $brand-primary;
       border-radius: 5px;
+      transition: all 300ms ease;
+      &:hover { border: 2px solid black; }
       img { @include square(100%); }
     }
     p {
@@ -605,4 +691,3 @@
       letter-spacing: 0.5px;
     }
   }
-}
