--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -33,12 +33,12 @@
                     <input type="password" class="form-control" placeholder="Password">
                   </div>
                   <div class="form-group">
-                    <label for="">
+                    <label for="" class="text-light">
                     <input type="radio" name="continue"> Continue without passsword.
                     </label>
                   </div>
                   <div class="form-group">
-                    <label for="">
+                    <label for="" class="text-light">
                     <input type="radio" name="continue"> I have a selfcare account and password.
                     </label>
                   </div>
@@ -144,7 +144,7 @@
       <span>Rs 200.00</span>
       </div>
       <form action="" class="form-inline">
-        <label for=""> coupon code
+        <label for="" class="text-light"> coupon code
           <input type="text">
         </label>
         <button class="btn btn-primary">APPLY</button>
