--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -70,12 +70,16 @@
       <h3 class="text-center text-uppercase brand-brown-dark font-semibold">You may also like</h3>
       <!-- Slider -->
       <uib-carousel>
-        <uib-slide ng-repeat="likepro in like">
-          <div class="inner-like text-center">
-            <div class="like-image round">
-              <img ng-src="{{likepro.image}}" alt="" class="img-responsive" />
+        <uib-slide ng-repeat="likes in like">
+          <div class="row">
+            <div class="col-md-4" ng-repeat="likepro in likes">
+              <div class="inner-like text-center">
+                <div class="like-image round">
+                  <img ng-src="{{likepro.image}}" alt="" class="img-responsive" />
+                </div>
+                <span class="text-uppercase brand-primary font-semibold">{{likepro.name}} | <i class="fa fa-inr"></i>{{likepro.price}}</span>
+              </div>
             </div>
-            <span class="text-uppercase brand-primary font-semibold">{{likepro.name}} | <i class="fa fa-inr"></i>{{likepro.price}}</span>
           </div>
         </uib-slide>
     </uib-carousel>
